<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL" Id="{53ff6662-fc6b-4a00-9f46-186d8230905b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    {attribute 'pytmc' := 'pv: PLC:KFE:MOTION:ARB:01'}
    fbArbiter: FB_Arbiter(1);
	{attribute 'pytmc' := 'pv: PLC:KFE:MOTION:ARB:02'}
    fbArbiter2: FB_Arbiter(2);
    {attribute 'pytmc' := 'pv: PLC:KFE:MOTION:FFO:01'}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 1^Output'}
    fbFastFaultOutput1: FB_HardwareFFOutput := (bAutoReset := TRUE, i_sNetID:='172.21.92.73.1.1');
    {attribute 'pytmc' := 'pv: PLC:KFE:MOTION:FFO:02'}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 2^Output'}
    fbFastFaultOutput2: FB_HardwareFFOutput := (bAutoReset := TRUE, i_sNetID:='172.21.92.73.1.1');

    (* Photon energy comes from the arbiter (see PMPS_PRE.IO Inputs.rPhotonEnergy!) *)
    {attribute 'pytmc' := 'pv: PLC:KFE:MOTION:PhotonEnergy'}
    fPhotonEnergy_eV AT %I* : REAL;
    {attribute 'pytmc' := 'pv: PLC:KFE:MOTION:PMPS:ReqTrans'}
    rReqTrans AT %I*		: ARRAY [1..PMPS_GVL.AUX_ATTENUATORS] OF ST_PMPS_Attenuator_IO;
    {attribute 'pytmc' := 'pv: PLC:KFE:MOTION:PMPS:CurTrans'}
    rCurTrans AT %Q*		: ARRAY [1..PMPS_GVL.AUX_ATTENUATORS] OF ST_PMPS_Attenuator_IO;

END_VAR

VAR_GLOBAL CONSTANT
    iFiltersPerSATTBlade : INT := 8;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>